<resources>
    <string name="app_name">RoutineTimer</string>

    <string name="str_test">test-String!</string>

    <string name="str_btn_MainActivity_routines">View Routines!</string>
    <string name="str_button_MainActivity_test">test!</string>
    <string name="str_tv_MainActivity_username">Please log in!</string>

    <string name="str_tv_EditRoutine_sequential_tileName">Tile name</string>
    <string name="str_dd_SelectRoutine_createRoutine_mode">Routine mode</string>

    <string name="str_btn_EditRoutine_sequential_icon">set icon</string>
    <string name="str_btn_EditRoutine_sequential_color">Set Color</string>
    <string name="str_tv_SetRoutine_routineName">Routine name displayed here</string>

    <string name="str_actv_SelectRoutine_createRoutine_name">Name</string>
    <string name="legacy_str_tv_SelectRoutine_createRoutine_info">Enter routine name:</string>
    <string name="str_rb_SelectRoutine_createRoutine_create">Create new routine</string>
    <string name="str_tv_SelectRoutine_selectRoutine_info">Select existing routine:</string>
    <string name="str_dd_SelectRoutine_selectRoutine_dropdown">Select Routine</string>
    <string name="str_rb_SelectRoutine_selectRoutine_select">Select existing routine</string>
    <string name="str_fab_SelectRoutine_add">add routine</string>
    <string name="title_activity_select">ScrollingActivity</string>


    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_select_routine">SelectRoutine</string>
    <string name="str_tv_MainActivity_login">Please log in!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_btn_SelectRoutine_createRoutine_save">save!</string>
    <string name="str_tv_SelectRoutine_createRoutine_info">Create Routine</string>
    <string name="str_menu_SelectRoutine_contextMenu_delete">Delete</string>
    <string name="str_menu_SelectRoutine_contextMenu_duplicate">Duplicate</string>
    <string name="str_btn_EditRoutine_sequential_convert">convert to continuous</string>
    <string name="str_btn_EditRoutine_sequential_prev">Previous</string>
    <string name="str_btn_EditRoutine_sequential_cycle_next">Next</string>
    <string name="str_tv_EditRoutine_sequential_routineName">Routine name</string>
    <string name="str_tv_EditRoutine_sequential_color_hue">Hue</string>
    <string name="str_btn_EditRoutine_sequential_cycle_delete">delete tile!</string>
    <string name="str_btn_EditRoutine_sequential_routines_organize">organize routine</string>
    <string name="str_btn_EditRoutine_sequential_cycle_add">add tile</string>
    <string name="str_btn_EditRoutine_sequential_organize_back">Back</string>
    <string name="str_tv_EditRoutine_continuous_routineName">Routine name</string>
    <string name="str_btn_MainActivity_run">run routine!</string>
    <string name="str_et_editContinuousRoutine_add">Add Tile!</string>
    <string name="str_tv_RunRoutine_continuous_routineName">Routine name</string>
    <string name="str_tv_viewholder_runTile_currentTimeInfo_countUp">Current time:</string>
    <string name="str_tv_viewholder_runTile_currentTimeInfo_countDown">Remaining time:</string>
    <string name="str_btn_RunRoutine_sequential_pause">Pause</string>
</resources>
