<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    tools:context=".SelectRoutine">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/cv_SelectRoutine_selectRoutine_cardView"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_SelectRoutine_createRoutine_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_SelectRoutine_createRoutine_create"
            android:textSize="20sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_SelectRoutine_selectRoutine_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_SelectRoutine_selectRoutine_select"
            android:textSize="20sp" />

    </RadioGroup>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_SelectRoutine_selectRoutine_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dimen_cardViewCornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20sp">

            <TextView
                android:id="@+id/tv_SelectRoutine_createRoutine_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str_tv_SelectRoutine_createRoutine_info"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12sp" />

            <AutoCompleteTextView
                android:id="@+id/actv_SelectRoutine_createRoutine_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/str_actv_SelectRoutine_createRoutine_name"
                android:maxLines="1" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dimen_cardViewCornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20sp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_SelectRoutine_selectRoutine_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str_tv_SelectRoutine_selectRoutine_info"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_dd_SelectRoutine_selectRoutine_dropdown"
                app:boxCornerRadiusTopEnd="@dimen/dimen_textFieldCorners"
                app:boxCornerRadiusTopStart="@dimen/dimen_textFieldCorners">

                <AutoCompleteTextView
                    android:id="@+id/dd_SelectRoutine_selectRoutine_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>